--- a/source-code/index.html
+++ b/source-code/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<meta http-equiv="refresh" content="0.5;https://www.youtube.com/watch?v=dQw4w9WgXcQ"/>
+	<meta http-equiv="refresh" content="0.5;https://www.youtube.com/watch?v=lXMskKTw3Bc"/>
 </head>
 <body>
 
